<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/mainarea"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="wrap_content" 
    android:gravity="center" >

	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

		<LinearLayout 
		    android:orientation="vertical"
			android:layout_gravity="center_horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    >
		    
		    <TextView android:id="@+id/description"
		    	android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:textSize="18sp"
			    android:padding="4dp"
			    />
			    
		    <TextView android:id="@+id/usernamelabel"
		    	android:layout_width="fill_parent" 
			    android:layout_height="fill_parent" 
			    android:textSize="18sp"
			    android:padding="4dp"
			    android:text="@string/usernamelabel"
			    />
		    
			<EditText android:id="@+id/vonageusername"
			    android:layout_width="fill_parent" 
			    android:layout_height="fill_parent" 
			    android:text="@string/vonageusername"
			    />

			<TextView android:id="@+id/passwordlabel"
		    	android:layout_width="fill_parent" 
			    android:layout_height="fill_parent"
			    android:textSize="18sp"
			    android:padding="4dp" 
			    android:text="@string/passwordlabel"
			    />

			<EditText android:id="@+id/vonagepassword"
			    android:layout_width="fill_parent" 
			    android:layout_height="fill_parent"
				android:inputType="textPassword"			     
			    android:text="@string/vonagepassword"
			    />
			    
		</LinearLayout>
	    	
		<LinearLayout 
			android:orientation="horizontal"
			android:layout_gravity="center_horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    >
		    
			<Button android:id="@+id/vonagelogin"
			    android:layout_width="wrap_content" 
			    android:layout_height="fill_parent" 
			    android:text="@string/vonagelogin" 
			    android:layout_weight="1" />
		
			<Button android:id="@+id/vonagecancel"
			    android:layout_width="wrap_content" 
			    android:layout_height="fill_parent" 
			    android:text="@string/vonagecancel" 
			    android:layout_weight="1" />
			    
		</LinearLayout>

	</LinearLayout>
	
</RelativeLayout>